# valkyrie-datafeed

./: .gitignore  CMakeLists.txt  plugin.cpp  plugin.h
bridge/: ami_bridge.cpp  ami_bridge.h
core/: SessionContext.h  config.cpp  config.h  pluginstate.h  resource.h  resource.rc  types.h
core/grid/: grid_control.cpp  grid_control.h
data/: data_store.cpp  data_store.h  feed_logger.cpp  feed_logger.h
extradata/: extra_dispatcher.cpp  extra_dispatcher.h
extradata/common/: data_point.h
extradata/financial/: FinancialFetcher.cpp  FinancialFetcher.h  FinancialParser.cpp  FinancialParser.h  FinancialStore.cpp  FinancialStore.h
extradata/ownership/: ownership_fetcher.cpp  ownership_fetcher.h  ownership_parser.cpp  ownership_parser.h  ownership_store.cpp  ownership_store.h
extradata/ritelflow/: ritel_fetcher.cpp  ritel_fetcher.h  ritel_parser.cpp  ritel_parser.h  ritel_store.cpp  ritel_store.h
net/: api_client.cpp  api_client.h  ws_client.cpp  ws_client.h
net/proto/: feed.proto  handshake.proto  ping.proto  pong.proto  subscribe.proto
net/proto/compiled/: feed.pb.c  feed.pb.cc  feed.pb.h  handshake.pb.c  handshake.pb.cc  handshake.pb.h  orderbook_req.pb.c  orderbook_req.pb.h  orderbook_resp.pb.c  orderbook_resp.pb.h  ping.pb.c  ping.pb.cc  ping.pb.h  pong.pb.c  pong.pb.cc  pong.pb.h  subscribe.pb.c  subscribe.pb.cc  subscribe.pb.h
ui/: ConfigDlg.cpp  ConfigDlg.h  ConfigureDlg.cpp  ConfigureDlg.h  EODBackfillDlg.cpp  EODBackfillDlg.h
ui/orderbook/: HeaderPanel.cpp  HeaderPanel.h  OrderbookClient.cpp  OrderbookClient.h  OrderbookData.h  OrderbookDlg.cpp  OrderbookDlg.h
